# cache-demo

./: .gitignore  README.md
db-app/: Cargo.toml
db-app/src/: cache.rs  db.rs  main.rs  models.rs
infra/docker/: docker-compose.yml
infra/terraform/: locals.tf  main.tf  provider.tf  variables.tf
infra/terraform/modules/cache/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/database/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/postgres/: main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/modules/vcn/: main.tf  outputs.tf  variables.tf  versions.tf
