[package]
name = "db-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono" ] }
redis = { version = "0.32", features = ["tokio-comp"] }
dotenvy = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"